--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "four-tictactoe",
-  "homepage": "https://ganeshbirajdar09.github.io/tictactoe",
+  "homepage": "https://ganeshbirajdar09.github.io/tic-tac-toe",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
